# http/http.go
@@ -2,8 +2,8 @@ package http
 
 import (
 	"encoding/json"
-	"fmt"
 	"net/http"
+	"strings"
 	"time"
 
 	_ "http_server/docs"
@@ -28,76 +28,78 @@ func newServer(curr_storage Storage) *Server {
 }
 
 func task_work(s *Server, id uuid.UUID) {
-	time.Sleep(10000 * time.Second)
+	time.Sleep(10 * time.Second)
 
 	s.storage.Put(id.String(), map[string]string{"status": "ready", "result": "some rubish"})
 }
 
 // @Summary Post task task_id
 // @Description Post task_id in DataBase and start task
-// @Success 200 {string} string "Id"
-// @Failure 500 {string} string "Failed to store value"
+// @Success 201 {json} json "task_id": "id value"
+// @Failure 404 {string} string "Failed to store value"
 // @Router /task [post]
 func (s *Server) postHandler(w http.ResponseWriter, r *http.Request) {
 	id, _ := uuid.NewUUID()
 
 	if err := s.storage.Post(id.String(), map[string]string{"status": "in_progress", "result": ""}); err != nil {
-		http.Error(w, "Failed to store value", http.StatusInternalServerError)
+		http.Error(w, "Failed to store value", http.StatusNotFound)
 
 		return
 	}
 
 	go task_work(s, id)
 
-	fmt.Fprint(w, id.String())
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(map[string]string{"task_id": id.String()})
 }
 
 // @Summary Get task status
 // @Description Post task_id in DataBase
-// @Param task_id query string true "task_id"
+// @Param task_id path string true "task_id"
 // @Success 200 {json} json "status": "status state"
-// @Failure 500 {string} string "Failed to get status"
-// @Router /status/ [get]
+// @Failure 404 {string} string "Failed to get status"
+// @Router /status/{task_id} [get]
 func (s *Server) getStatusHandler(w http.ResponseWriter, r *http.Request) {
-	id := r.URL.Query().Get("task_id")
+	url := strings.Split(r.URL.Path, "/")
+	id := url[2]
+
 	val, err := s.storage.Get(id)
 
 	if err != nil {
-		http.Error(w, "Failed to get status", http.StatusInternalServerError)
+		http.Error(w, "Failed to get status", http.StatusNotFound)
 
 		return
 	}
 
 	w.Header().Set("Content-Type", "application/json")
 	json.NewEncoder(w).Encode(map[string]string{"status": (*val)["status"]})
-
-	//w.WriteHeader(http.StatusOK)
 }
 
 // @Summary Get task result
 // @Description Post task_id in DataBase
-// @Param task_id query string true "task_id"
+// @Param task_id path string true "task_id"
 // @Success 200 {json} json "result": "result state"
-// @Failure 500 {string} string "Failed to get result"
-// @Router /result/ [get]
+// @Failure 404 {string} string "Failed to get result"
+// @Router /result/{task_id} [get]
 func (s *Server) getResultHandler(w http.ResponseWriter, r *http.Request) {
-	id := r.URL.Query().Get("task_id")
+	url := strings.Split(r.URL.Path, "/")
+	id := url[2]
+
 	val, err := s.storage.Get(id)
 
 	if err != nil {
-		http.Error(w, "Failed to get result", http.StatusInternalServerError)
+		http.Error(w, "Failed to get result", http.StatusNotFound)
 
 		return
 	}
 
 	if (*val)["result"] == "" {
-		fmt.Fprint(w, "Task hasn't finished yet!")
+		http.Error(w, "Failed to get result", http.StatusNotFound)
 	} else {
 		w.Header().Set("Content-Type", "application/json")
 		json.NewEncoder(w).Encode(map[string]string{"result": (*val)["result"]})
 	}
-
-	//w.WriteHeader(http.StatusOK)
 }
 
 func CreateNewServer(storage Storage, addr string) error {
@@ -109,8 +111,8 @@ func CreateNewServer(storage Storage, addr string) error {
 
 	r.Route("/", func(r chi.Router) {
 		r.Post("/task", server.postHandler)
-		r.Get("/status/", server.getStatusHandler)
-		r.Get("/result/", server.getResultHandler)
+		r.Get("/status/{task_id}", server.getStatusHandler)
+		r.Get("/result/{task_id}", server.getResultHandler)
 	})
 
 	http_server := http.Server{
